# toke-models

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  focused_run3.py  main.py  pyproject.toml
backlog/: B-COMPOSE.md
benchmark/: corpus_sandbox_results.json  tasks.jsonl  tasks_v2.jsonl  test_programs.jsonl  test_programs_100.jsonl  validation_report.json
cloud/: aws_train.sh  post_train.sh
compose/: c_edge_cases.py  d_applications.py
corpus/: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  config.example.yaml  config.yaml  dashboard.py  focused_run2.py  focused_run3.py  pyproject.toml  system_prompt_phase2.txt
corpus/compose/: b_compose.py
corpus/corpus/: schema.json
corpus/correct/: escalate.py  loop.py
corpus/dispatch/: base.py  deepseek.py  gemini.py  openai.py  pool.py
corpus/dispatch/tests/: test_clients.py  test_pool.py
corpus/docs/: cloud-corpus-proposal.md  pipeline-architecture.md
corpus/generator/tests/: test_curriculum.py
corpus/infra/: .env.template  build_tkc.sh  deploy.sh  setup.sh  userdata.sh  verify.sh
corpus/judge/: rubric.md
corpus/metrics/: checkpoint.json  progress.json
corpus/pipeline/tests/: test_integration.py  test_validate.py
corpus/prompts/: correct.md  generate_c.md  generate_python.md  generate_toke.md  system.md  system_base.md
corpus/prompts/category/: A-ERR.md
corpus/scripts/: filter_corpus.py  migrate_corpus.sh  transform_corpus.py  validate_corpus.py
corpus/store/: metrics.py
corpus/store/tests/: test_store.py
corpus/tests/: test_integration.py
corpus/transform/: phase1_to_phase2.py  test_transform.py
corpus/trial/tests/: test_trial.py
corpus/validate/: autofixer.py  quality.py
dispatch/: anthropic.py  xai.py
docs/: cloud-corpus-proposal.md  hybrid-training.md  training-guide.md
eval/: safety_eval.py
finetune/: merge_adapters.py  merge_mlx.py  prepare_data.py  prepare_mlx_data.py  train_mlx.py  train_qlora.py
generator/: curriculum.py  new_tasks.json
huggingface/: .gitattributes  README.md  UPLOAD.md  config.json  eval_results.json  eval_results_gate2.json  tokenizer_config.json  upload.sh
infra/: .env.template
metrics/: scorecard.json  trial_results.json
train/: data.py  (+4 more)
(+64 files in other folders)
