[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toke-model-corpus"
version = "0.1.0"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Matt Watt"}]

dependencies = [
    "httpx[http2]>=0.27",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["generator*", "dispatch*", "trial*", "validate*", "correct*", "store*", "pipeline*", "diff_test*", "judge*", "monitor*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
